--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+application:
+  version: v1.0.0
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -9,4 +11,6 @@ spring:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  global-config:
+    banner: off #关闭mybatis_plus的启动图标
   mapper-locations: classpath:com/zty/mybatis_plus/mapper/maps/*.xml,classpath:com/zty/mybatis_plus/mapper/*/*.xml
