--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,4 +13,4 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   global-config:
     banner: off #关闭mybatis_plus的启动图标
-  mapper-locations: classpath:com/zty/mybatis_plus/mapper/maps/*.xml,classpath:com/zty/mybatis_plus/mapper/*/*.xml
+  mapper-locations: classpath:com/zty/mybatis_plus/mapper/maps/*.xml,classpath:com/zty/mybatis_plus/mapper/*/*.xml #配置mapper xml文件的路径
